# conveyor-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: example_invalid.txt  example_valid.txt
include/: conveyor.hpp  item.hpp  logger.hpp  machine.hpp  parser.hpp  types.hpp
lib/: conveyor.cpp  item.cpp  logger.cpp  machine.cpp  parser.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_conveyor.cpp  test_logger.cpp  test_machine.cpp  test_parser.cpp
